# tps-hpc-engine

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_residual.cpp
data/: example_res_response.txt
docs/integration/: hd_intelligent_real_paths_tps_engine.patch  hd_intelligent_tps_engine.patch
docs/profiling/: cache_analysis.txt  function_timings.txt  profiling_report.txt  tps_omp_bench.sample.txt  tps_serial_bench.sample.txt
docs/roofline/: roofline_data.txt
include/tps/: monte_carlo.hpp  optimization.hpp  residual.hpp  types.hpp
python/: binding.cpp  demo.py
scripts/: cache_analysis.py  profile_sample.sh  roofline.py
src/mpi/: main_uq.cpp  monte_carlo.cpp
src/openmp/: main.cpp  optimization_omp.cpp  residual_omp.cpp
src/profiling/: bench_profile.cpp
src/serial/: main.cpp  optimization.cpp  residual.cpp
